--- a/submissions/Eugene50/popup-menu/index.html
+++ b/submissions/Eugene50/popup-menu/index.html
@@ -11,12 +11,12 @@
     <div class="container">
         <div class="menu-item"><a href="#">Mail</a></div>
         <div class="menu-item"><a href="#">Blog</a></div>
-        <input class="main-checkbox" type="checkbox">
+        <input id="main-checkbox" class="main-checkbox visually-hidden" type="checkbox">
         <label class="menu-label" for="main-checkbox">
-            <img class="menu-icon" src="img\menu.png" height="20" width="20"/>
+            <img class="menu-icon" src="img\menu.png" alt="Menu" height="20" width="20"/>
         </label>
         <div class="menu-item"><a href="#">Music</a></div>
-        <div><a href="#"><img class="alf" src="img/alf.jpg" alt="User"></a></div>
+        <div class="menu-icon-alf"><a href="#"><img class="alf" src="img/alf.jpg" alt="User"></a></div>
 
         <div class="wraper">
             <div class="hidden-container">
@@ -32,7 +32,7 @@
                 <a href="#"><div class="item" tabindex="10"><img src="img/10.png" alt="You">You</div></a> 
             </div>
 
-            <input class="sub-checkbox" type="checkbox">
+            <input id="sub-checkbox" class="sub-checkbox visually-hidden" type="checkbox">
             <label class="more-label" for="sub-checkbox">
                     <p>More</p>
             </label>
