--- a/submissions/CrazyPike/formss/index.html
+++ b/submissions/CrazyPike/formss/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Главная страница</title>
+    <title>Main form</title>
     <link href="main.css" rel="stylesheet">
   </head>
   <body class="page__common">
     <nav class="menu">
-      <button class="menu__button"><span class="menu__button-text"><img class="menu__button-img" src="img/arrow_back.png" alt="Arrow back">GO BACK</span></button>  <a href="#"><img class="menu__logo" src="img/logo.png" alt="Here is a logo"></a>
-      <button class="menu__button"><span class="menu__button-text"><img class="menu__button-img" src="img/icon_profile.png" alt="Log in">SIGN IN</span></button>
+      <button class="menu__button"><span class="menu__button-text"><img class="menu__button-img" src="img/arrow_back.png" alt="Arrow back"><span>go back</span></span></button><a class="page__links" href="#"><img class="menu__logo" src="img/logo.png" alt="Here is a logo"></a>
+      <button class="menu__button"><span class="menu__button-text"><img class="menu__button-img" src="img/icon_profile.png" alt="Log in"><span>sign in</span></span></button>
     </nav>
     <main class="form">
       <form id="html5form"></form>
       <section class="form__common-info">
         <div class="quote"><img class="form__icons" src="img/icon_order.png" alt="Order icon">
-          <div class="form__header-text">YOUR ORDER</div>
+          <div class="form__header-text">your quote</div>
           <table class="quote__table">
             <thead>
-              <td> ITEMS</td>
-              <td> DETAILS</td>
-              <td> PRICE</td>
-              <td> DELIVERY</td>
+              <td> items</td>
+              <td> details</td>
+              <td> price</td>
+              <td> delivery</td>
             </thead>
             <tr>
               <td> 2 documents</td>
@@ -31,22 +31,22 @@
             </tr>
           </table>
           <div class="quote__buttons">
-            <button class="menu__button quote__button-place-order"><span class="menu__button-text">PLACE ORDER</span></button>
-            <button class="menu__button"><span class="menu__button-text">PRINT A QUOTE</span></button>
+            <button class="menu__button quote__button-place-order"><span class="menu__button-text">place order</span></button>
+            <button class="menu__button"><span class="menu__button-text">print a quote</span></button>
           </div>
         </div>
         <div class="contacts"><img class="form__icons" src="img/icon_help.png" alt="Help icon">
-          <div class="form__header-text">HELP CENTER</div>
+          <div class="form__header-text">help center</div>
           <div class="contacts__desc">
             If you need assistance while placing your
             order, contact one of our beloved Project
             Manager by phone or email
           </div>
-          <div class="contacts__details"><span>+971 (0) 555 555</span><span>help@qtest.com</span></div>
+          <div class="contacts__details"><a href="tel:+9710555555">+971 (0) 555 555</a><span>help@qtest.com</span></div>
         </div>
       </section>
       <section class="section-translate">
-        <div class="section-translate__desc">SELECT WHAT YOU WANT TO TRANSLATE
+        <div class="section-translate__desc">select what you want to translate
           <div class="section-translate__text__center"></div>
           <hr class="section-translate__horizontal-line">
         </div>
@@ -64,15 +64,15 @@
         <div class="section__header">Upload your documents</div>
         <div class="section-upload__button">
           <input type="file" id="upload-input">
-          <label for="upload-input" tabindex="0"><span class="menu__button-text"><img class="menu__button-img" src="img/icon_cloud.png" alt="Upload icon">Upload a new file</span></label>
+          <label for="upload-input" tabindex="0"><span class="menu__button-text"><img class="menu__button-img" src="img/icon_cloud.png" alt="Upload icon"><span>Upload a new file</span></span></label>
         </div>
         <div class="section-upload__table-container">
           <table class="section-upload__table">
             <thead>
-              <td class="section-upload__table-col-1">FILE NAME</td>
-              <td class="section-upload__table-col-2">FILE SIZE</td>
-              <td class="section-upload__table-col-3">NUMBER OF WORDS</td>
-              <td class="section-upload__table-col-4">REMOVE</td>
+              <td class="section-upload__table-col-1">file name</td>
+              <td class="section-upload__table-col-2">file size</td>
+              <td class="section-upload__table-col-3">number or words</td>
+              <td class="section-upload__table-col-4">remove</td>
             </thead>
             <tr>
               <td class="section-upload__table-col-1"><img src="img/icon_file.png">business_operations.docx</td>
@@ -144,11 +144,15 @@
           <div class="section__ordinal-number">4</div>
           <div class="section__header">Tell us how urgent this job is</div>
           <div class="section-urgent__range">
+            <div class="section-urgent__range-end">
+              <div class="input-range-end"></div>
+              <div class="input-range-end"></div>
+            </div>
             <input type="range" min="0" max="2" value="1" id="form__range">
-            <div class="section-urgent__range-label"><span>I GOT TIME</span><span>AVERAGE</span><span>YESTERDAY</span></div>
+            <div class="section-urgent__range-label"><span>i got time</span><span>average</span><span>yesterday</span></div>
           </div>
           <div class="section-urgent__description"><img class="form__icons" src="img/icon_info.png" alt="">
-            <div class="form__header-text">YOUR ORDER</div>
+            <div class="form__header-text">your order</div>
             <div class="section-urgent__description-text"><span>With the AVERAGE timeline set up, our expert translator can</span>take a reasonable amount of time perfecting your translation</div>
           </div>
         </div>
@@ -158,15 +162,15 @@
         <div class="section__header">Sign up and choose a payment method</div>
         <div class="form-payment__signin-text">Already have an account with us?<a href="#">Sign In</a></div>
         <div class="form-payment__input-name">
-          <div class="form-payment__input"><span>FULL NAME</span>
+          <div class="form-payment__input"><span>full name</span>
             <input type="text" placeholder="Full name" pattern="[0-9A-Za-z. -]+" title="Enter the name">
           </div>
         </div>
         <div class="form-payment__input-email-pass">
-          <div class="form-payment__input"><span>EMAIL ADDRESS</span>
+          <div class="form-payment__input"><span>email address</span>
             <input type="email" placeholder="Email" pattern="[0-9A-Za-z.-]+[@][0-9A-Za-z.-]+[.][0-9A-Za-z.-]+" title="Email address">
           </div>
-          <div class="form-payment__input"><span>PASSWORD</span>
+          <div class="form-payment__input"><span>password</span>
             <input type="password" minlength="6" placeholder="Enter password.." title="Enter password">
           </div>
         </div>
@@ -179,13 +183,13 @@
           <label class="form-payment__option" for="option-amazon"><img src="img/icon_amazon.png"></label>
         </div>
         <div class="form-payment__card-info">
-          <div class="form-payment__card-input"><span>CARD NUMBER</span>
+          <div class="form-payment__card-input"><span>card number</span>
             <input class="form-payment__card-number" type="text" pattern="[0-9]{16}" placeholder="Card number.." minlength="16" maxlength="16" title="Card number must be 16-digit">
           </div>
-          <div class="form-payment__card-input"><span>CARD EXPIRE</span>
+          <div class="form-payment__card-input"><span>card expire</span>
             <input class="form-payment__card-expire" type="text" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}" title="Format MM/YY">
           </div>
-          <div class="form-payment__card-input"><span>CARD CVV</span>
+          <div class="form-payment__card-input"><span>card cvv</span>
             <input class="form-payment__card-cvv" type="password" pattern="[0-9]{3}" placeholder="CVV" minlength="3" maxlength="3" title="CVV mush have 3 digits"><span></span>
           </div>
         </div>
@@ -195,21 +199,21 @@
           <input type="checkbox" id="TC-label">
           <label for="TC-label">I agree to the terms & Conditions</label>
         </div>
-        <button class="menu__button quote__button-place-order"><span class="menu__button-text">PLACE ORDER</span></button>
-        <button class="menu__button"><span class="menu__button-text">PRINT A QUOTE</span></button>
+        <button class="menu__button quote__button-place-order"><span class="menu__button-text">place order</span></button>
+        <button class="menu__button"><span class="menu__button-text">print a quote</span></button>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__container">
-        <section class="footer__item"><img class="footer__item-icon" src="img/icon_heart.png" alt="heart icon"><span class="footer__item-header">WHAT WE DO</span><span class="footer__item-content">
+        <section class="footer__item"><img class="footer__item-icon" src="img/icon_heart.png" alt="heart icon"><span class="footer__item-header">what we do</span><span class="footer__item-content">
             We provide a full range of languageservices including content development,
             document, website and social media
             accounts translation</span></section>
-        <section class="footer__item"><img class="footer__item-icon" src="img/icon_compass.png" alt="Compass icon"><span class="footer__item-header">OUR MAIN OFFICE</span><span class="footer__item-content">DUBAI, UAE<br><span>P.O. Box 832472</span><br><span>Phone +971 (0) 44278128</span></span></section>
-        <section class="footer__item"><img class="footer__item-icon" src="img/icon_network.png" alt="Network icon"><span class="footer__item-header">CONNECT WITH US</span><span class="footer__item-content">
+        <section class="footer__item"><img class="footer__item-icon" src="img/icon_compass.png" alt="Compass icon"><span class="footer__item-header">our main office</span><span class="footer__item-content">Dubai, UAE<br><span>P.O. Box 832472</span><br><span>Phone<a href="tel:+9710555555">+971 (0) 44278128</a></span></span></section>
+        <section class="footer__item"><img class="footer__item-icon" src="img/icon_network.png" alt="Network icon"><span class="footer__item-header">connect with us</span><span class="footer__item-content">
             <div class="footer__social-item"><img src="img/icon_facebook.png" alt="Facebook logo"><span> Facebook</span></div>
             <div class="footer__social-item"><img src="img/icon_tweeter.png" alt="Twitter logo"><span>Twitter</span></div>
-            <div class="footer__social-item"><img src="img/icon_linkedin.png" alt="Linkedin  logo"><span>Linkedin</span></div></span></section><a href="#"><img src="img/logo_grey.png" alt="Company logo"></a>
+            <div class="footer__social-item"><img src="img/icon_linkedin.png" alt="Linkedin  logo"><span>Linkedin</span></div></span></section><a class="page__links" href="#"><img src="img/logo_grey.png" alt="Company logo"></a>
       </div>
     </footer>
   </body>
