add atribut alt for image

--- a/submissions/beta-version-profile/popup/index.html
+++ b/submissions/beta-version-profile/popup/index.html
@@ -22,79 +22,79 @@
                 <li class="nav__item nav-menu">
                     <input type="checkbox" class="nav__checkbox visually-hidden" id="nav__checkbox" />
                     <label for="nav__checkbox" class="nav__label">
-                        <img src="images/menu.svg" class="nav__img" alt="menu-icon">
+                        <img src="images/menu.svg" class="nav__img" alt="menu-icon"/>
                     </label>
                     <div class="nav__wrapper">
                         <ul class="popup">
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/drive.svg" class="popup__icon"></img>
+                                    <img src="./images/drive.svg" class="popup__icon" alt="drive"/>
                                     <span>Drive</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/maps.svg" class="popup__icon"></img>
+                                    <img src="./images/maps.svg" class="popup__icon" alt="maps"/>
                                     <span>Maps</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/youtube.svg" class="popup__icon"></img>
+                                    <img src="./images/youtube.svg" class="popup__icon" alt="youtube"/>
                                     <span>YouTube</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/kmail.svg" class="popup__icon"></img>
+                                    <img src="./images/kmail.svg" class="popup__icon" alt="kmail"/>
                                     <span>Kmail</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/translate.svg" class="popup__icon"></img>
+                                    <img src="./images/translate.svg" class="popup__icon" alt="translate"/>
                                     <span>Translate</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/search.svg" class="popup__icon"></img>
+                                    <img src="./images/search.svg" class="popup__icon" alt="search"/>
                                     <span>Search</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/news.svg" class="popup__icon"></img>
+                                    <img src="./images/news.svg" class="popup__icon" alt="news"/>
                                     <span>News</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/photos.svg" class="popup__icon"></img>
+                                    <img src="./images/photos.svg" class="popup__icon" alt="photos"/>
                                     <span>Photo</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/koogle-plus.svg" class="popup__icon"></img>
+                                    <img src="./images/koogle-plus.svg" class="popup__icon" alt="koogle-plus"/>
                                     <span>Koogle+</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/calendar.svg" class="popup__icon"></img>
+                                    <img src="./images/calendar.svg" class="popup__icon" alt="calendar"/>
                                     <span>Calendar</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/docs.svg"class="popup__icon"></img>
+                                    <img src="./images/docs.svg"class="popup__icon" alt="docs"/>
                                     <span>Documents</span>
                                 </a>
                             </li>
                             <li class="popup__item">
                                 <a href="#" class="popup__link">
-                                    <img src="./images/hangouts.svg" class="popup__icon"></img>
+                                    <img src="./images/hangouts.svg" class="popup__icon" alt="hangouts"/>
                                     <span>Hangouts</span>
                                 </a>
                             </li>
@@ -104,37 +104,37 @@
                             <div class="popup-more__wrapper">
                                 <li class="popup__item">
                                     <a href="#" class="popup__link">
-                                        <img src="./images/koogle-play.svg" class="popup__icon"></img>
+                                        <img src="./images/koogle-play.svg" class="popup__icon" alt="koogle-play"/>
                                         <span>Play</span>
                                     </a>
                                 </li>
                                 <li class="popup__item">
                                     <a href="#" class="popup__link">
-                                        <img src="./images/koogle-earth.svg" class="popup__icon"></img>
+                                        <img src="./images/koogle-earth.svg" class="popup__icon" alt="koogle-earth"/>
                                         <span>Earth</span>
                                     </a>
                                 </li>
                                 <li class="popup__item">
                                     <a href="#" class="popup__link">
-                                        <img src="./images/blogger.svg" class="popup__icon"></img>
+                                        <img src="./images/blogger.svg" class="popup__icon" alt="blogger"/>
                                         <span>Blogger</span>
                                     </a>
                                 </li>
                                 <li class="popup__item">
                                     <a href="#" class="popup__link">
-                                        <img src="./images/jamboard.svg" class="popup__icon"></img>
+                                        <img src="./images/jamboard.svg" class="popup__icon" alt="jamboard"/>
                                         <span>Jamboard</span>
                                     </a>
                                 </li>
                                 <li class="popup__item">
                                     <a href="#" class="popup__link">
-                                        <img src="./images/koogle-classroom.svg" class="popup__icon"></img>
+                                        <img src="./images/koogle-classroom.svg" class="popup__icon" alt="koogle-classroom"/>
                                         <span>Classroom</span>
                                     </a>
                                 </li>
                                 <li class="popup__item">
                                     <a href="#" class="popup__link">
-                                        <img src="./images/koogle-keep.svg" class="popup__icon"></img>
+                                        <img src="./images/koogle-keep.svg" class="popup__icon" alt="koogle-keep"/>
                                         <span>Koogle keep</span>
                                     </a>
                                 </li>
@@ -144,12 +144,12 @@
                 </li>
                 <li class="nav__item">
                     <a href="#" class="nav__link">
-                        <img src="images/notification.svg" class="nav__img" alt="menu-icon">
+                        <img src="images/notification.svg" class="nav__img" alt="menu-icon" alt="notification"/>
                     </a>
                 </li>
                 <li class="nav__item">
                     <a href="#" class="nav__link">
-                        <img src="images/user.svg" class="nav__img" alt="menu-icon">
+                        <img src="images/user.svg" class="nav__img" alt="menu-icon" alt="user" />
                     </a>
                 </li>
             </ul>
