--- a/submissions/denislukianenko/html5-form/index.html
+++ b/submissions/denislukianenko/html5-form/index.html
@@ -22,25 +22,25 @@
         <section class="summary-helpcenter">
           <div class="order-summary">
             <div class="order-info">
-              <div class="shifted-header">
+              <h3 class="shifted-header">
                 <span class="shifted-icon">📋</span>Your order
-              </div>
+              </h3>
               <div class="order-info-items">
                 <div class="info-item">
-                  <b>Items</b>
-                  <p>2 docs</p>
+                  <p class="info-item-bold">Items</p>
+                  <p class="info-item-text">2 docs</p>
                 </div>
                 <div class="info-item">
-                  <b>Details</b>
-                  <p>2 langs</p>
+                  <p class="info-item-bold">Details</p>
+                  <p class="info-item-text">2 langs</p>
                 </div>
                 <div class="info-item">
-                  <b>Price</b>
-                  <p>$ 696.06</p>
+                  <p class="info-item-bold">Price</p>
+                  <p class="info-item-text">$ 696.06</p>
                 </div>
                 <div class="info-item">
-                  <b>Delivery</b>
-                  <p>6 hours*</p>
+                  <p class="info-item-bold">Delivery</p>
+                  <p class="info-item-text">6 hours*</p>
                 </div>
               </div>
             </div>
@@ -54,24 +54,29 @@
             </div>
           </div>
           <div class="helpcenter">
-            <div class="shifted-header">
+            <h3 class="shifted-header">
               <span class="shifted-icon">🔅</span>Help Center
-            </div>
-            <p>
+            </h3>
+            <p class="helpcenter-text">
               If you need assistance with placing your order, contact one of our
               beloved Project Manager by phone or email.
             </p>
-            <b
-              ><a href="tel:+9710555555">+971 (0) 555 555</a>
-              <a href="email:help@qtest.com">help@qtest.com</a></b
-            >
+            <p class="helpcenter-bold">
+              <a class="helpcenter-link" href="tel:+9710555555"
+                >+971 (0) 555 555</a
+              >
+              <a class="helpcenter-link" href="email:help@qtest.com"
+                >help@qtest.com</a
+              >
+            </p>
           </div>
         </section>
         <section class="choose-type">
           <h2>Select what you want to translate</h2>
           <div class="doc-type-radio-group">
             <input
-              class="hidden-checkbox doc-type-radio"
+              required
+              class="visually-hidden doc-type-radio"
               type="radio"
               name="document-type"
               id="type-website"
@@ -85,7 +90,7 @@
             </label>
             <input
               checked
-              class="hidden-checkbox doc-type-radio"
+              class="visually-hidden doc-type-radio"
               type="radio"
               name="document-type"
               id="type-document"
@@ -98,7 +103,7 @@
               <p>Documents</p>
             </label>
             <input
-              class="hidden-checkbox doc-type-radio"
+              class="visually-hidden doc-type-radio"
               type="radio"
               name="document-type"
               id="type-social"
@@ -119,7 +124,7 @@
             <p>(Doc, Docx, Text, PDF, Markdown)</p>
           </div>
           <input
-            class="upload-input-hidden"
+            class="visually-hidden"
             type="file"
             name="document-file"
             id="document-upload-input"
@@ -218,7 +223,7 @@
               <input
                 checked
                 required
-                class="hidden-checkbox tone-radio"
+                class="visually-hidden tone-radio"
                 type="radio"
                 name="tone"
                 id="tone-friendly"
@@ -231,7 +236,7 @@
                 <p>Friendly / Casual</p>
               </label>
               <input
-                class="hidden-checkbox tone-radio"
+                class="visually-hidden tone-radio"
                 type="radio"
                 name="tone"
                 id="tone-corporate"
@@ -244,7 +249,7 @@
                 <p>Corporate / Pro</p>
               </label>
               <input
-                class="hidden-checkbox tone-radio"
+                class="visually-hidden tone-radio"
                 type="radio"
                 name="tone"
                 id="tone-media"
@@ -270,6 +275,7 @@
                   <div class="dot"></div>
                 </div>
                 <input
+                  required
                   type="range"
                   id="urgency-range"
                   class="urgency-range"
@@ -285,9 +291,9 @@
                 <p>Yesterday</p>
               </div>
               <div class="timeline-info-box">
-                <div class="shifted-header">
+                <h3 class="shifted-header">
                   <span class="shifted-icon">ℹ️</span>Timeline info
-                </div>
+                </h3>
                 <p>
                   With an <span class="label-yellow">AVERAGE</span> timeline
                   setup, our expert translator can take a reasonable amount of
@@ -358,7 +364,7 @@
           <div class="payment-type-radio-group">
             <input
               checked
-              class="hidden-checkbox payment-type-radio"
+              class="visually-hidden payment-type-radio"
               type="radio"
               name="payment-type"
               id="type-card"
@@ -370,7 +376,7 @@
               />
             </label>
             <input
-              class="hidden-checkbox payment-type-radio"
+              class="visually-hidden payment-type-radio"
               type="radio"
               name="payment-type"
               id="type-paypal"
@@ -382,7 +388,7 @@
               />
             </label>
             <input
-              class="hidden-checkbox payment-type-radio"
+              class="visually-hidden payment-type-radio"
               type="radio"
               name="payment-type"
               id="type-amazon"
@@ -462,39 +468,41 @@
     <footer>
       <div class="one-col-wrapper">
         <div class="footer-col">
-          <div class="shifted-header">
+          <h3 class="shifted-header">
             <span class="shifted-icon">💖</span>What we do
-          </div>
+          </h3>
           <i>
             We provide a full range of language services including content
             development, document, website and social media account translations
           </i>
         </div>
-        <div class="footer-col">
-          <div class="shifted-header">
-            <span class="shifted-icon">🗺️</span>Out main office
-          </div>
+        <address class="footer-col">
+          <h3 class="shifted-header">
+            <span class="shifted-icon">🗺️</span>Our main office
+          </h3>
           <p>
             Dubai UAE
           </p>
           <p>
             P.O. Box: 502735
           </p>
-          <p>
-            Phone: +971 (0) 44278128
-          </p>
-        </div>
+          <p>Phone: <a href="tel:+9710555555">+971 (0) 555 555</a></p>
+        </address>
 
         <div class="footer-col">
-          <div class="shifted-header">
+          <h3 class="shifted-header">
             <span class="shifted-icon">✌️</span>Connect with us
-          </div>
+          </h3>
           <p>🇫 <a href="#">Facebook</a></p>
           <p>🐦 <a href="#">Twitter</a></p>
           <p>💼 <a href="#">LinkedIn</a></p>
         </div>
         <a href="#" class="footer-logo-wrapper">
-          <img class="footer-logo" src="./img/footer-logo.png" alt="Footer logo" />
+          <img
+            class="footer-logo"
+            src="./img/footer-logo.png"
+            alt="Footer logo"
+          />
         </a>
       </div>
     </footer>
